cluster/constraints/c-allowedrepo.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: prod-repo-list
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - istio-system
      - kube-system
      - gatekeeper-system
      - config-management-system
      - default
  parameters:
    repos:
      - gcr.io
      - quay.io
      - redis
      - argoproj
      - docker.io/istio
      - jmalloc
