cluster/constraints/c-pod-no-escalation.yaml
  
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowPrivilegeEscalationContainer
metadata:
  name: psp-allow-privilege-escalation-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
    - istio-system
    - kube-system
    - gatekeeper-system
    - config-management-system
    - cnrm-system
