cluster/constraints/c-pod-no-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: psp-privileged-container
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - istio-system
      - kube-system
      - gatekeeper-system
      - config-management-system
      - cnrm-system
